cmake_minimum_required(VERSION 3.12)
project(FinalProject)

set(CMAKE_CXX_STANDARD 11)

add_executable(FinalProject main.cpp Space.cpp Space.h ArkhamEast.cpp ArkhamEast.h ArkhamWest.cpp ArkhamWest.h inputValidation.h inputValidation.cpp Menu.cpp Menu.h Game.cpp Game.h ArkhamMainRoom.cpp ArkhamMainRoom.h ArkhamNorth.cpp ArkhamNorth.h ArkhamSouth.cpp ArkhamSouth.h ArkhamDeathRoom.cpp ArkhamDeathRoom.h)